@@ -13,6 +13,8 @@ When		Who		What
 				 - Addressed issue #3 Detect Package Updates
 				 - Addressed issue #55 bug in package updates
 				 on debian and ubuntu systems
+				 - Addressed issue #55 bug in package updates
+				 - Addressed issue #56 Detect PHP Updates
 2017-01-13 	Richard Forth   Addressed issue #34 Added more graceful
 				message when apache[2]ctl is not found.
 2017-01-13 	Richard Forth   Addressed issue #33 Removed Version Number
